--- a/hello_world/Makefile
+++ b/hello_world/Makefile
@@ -1,6 +1,6 @@
 all: hello_world
 clean:
-	rm hello_world.o hello_world
+	rm -f hello_world.o hello_world
 hello_world.o: hello_world.c
 	gcc hello_world.c -o hello_world.o -c
 hello_world: hello_world.o
